deployement.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: yessinemimita
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      spec:
        containers:
          - name: nginx
            image: ghcr.io/horizon-school-of-digital-technologies/simple-webapp-color
            ports:
              - containerPort: 8080
            resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
        volumes:
    -     name: data-volume
          persistentVolumeClaim:
            claimName: my-storage-claim
